correct align

--- a/src/main/react-app/src/styles/common-styles.scss
+++ b/src/main/react-app/src/styles/common-styles.scss
@@ -4,12 +4,13 @@ body {
   min-width: 230px;
   margin: 0 auto;
   background: #fafafa;
+  font-family: "Roboto", sans-serif;
 }
 
 h1 {
   margin-top: 24px;
   font-size: 34px;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: normal;
 }
 
